welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: warning: enclosing method getMotif has result type Unit: return value discarded
  return T
  ^Array1:24: error: Unit does not take parameters
    setCouleurBrosse(T(pas))
                      ^